[gd_scene load_steps=2 format=3 uid="uid://b476fjhyidej5"]

[ext_resource type="Script" uid="uid://d1i6a38xr4gc" path="res://scripts/ChangelogDialod.gd" id="1"]

[node name="ChangelogDialog" type="Window"]
visible = false
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ChangelogText" type="RichTextLabel" parent="Panel/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."

[node name="BtnCloseChangelog" type="Button" parent="Panel/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "btn_close"

[node name="PullRequests" type="HTTPRequest" parent="."]
timeout = 20.0

[connection signal="meta_clicked" from="Panel/Margin/VBox/ChangelogText" to="." method="_on_ChangelogText_meta_clicked"]
[connection signal="pressed" from="Panel/Margin/VBox/BtnCloseChangelog" to="." method="_on_BtnCloseChangelog_pressed"]
[connection signal="request_completed" from="PullRequests" to="." method="_on_PullRequests_request_completed"]
